--- a/tweet-saver-extension/popup.html
+++ b/tweet-saver-extension/popup.html
@@ -140,6 +140,28 @@
       color: #721c24;
       border: 1px solid #f1aeb5;
     }
+
+    .status.info {
+      background: #d1ecf1;
+      color: #0c5460;
+      border: 1px solid #bee5eb;
+    }
+
+    .progress-bar {
+      width: 100%;
+      height: 4px;
+      background: #e1e8ed;
+      border-radius: 2px;
+      margin-top: 8px;
+      overflow: hidden;
+    }
+
+    .progress-fill {
+      height: 100%;
+      background: #1d9bf0;
+      transition: width 0.3s ease;
+      width: 0%;
+    }
     
     .help-text {
       font-size: 11px;
@@ -276,6 +298,34 @@
   </div>
   
   <div class="section">
+    <h3>YouTube Channel Import</h3>
+
+    <div class="form-group">
+      <label for="channelUrl">Channel URL</label>
+      <input type="url" id="channelUrl" placeholder="https://youtube.com/@channel or youtube.com/channel/UC..." />
+      <div class="help-text">Paste the YouTube channel URL to import video transcripts</div>
+    </div>
+
+    <div class="form-group">
+      <label for="videoLimit">Number of Videos</label>
+      <select id="videoLimit" style="width: 100%; padding: 8px 12px; border: 1px solid #e1e8ed; border-radius: 6px; font-size: 13px; font-family: inherit; box-sizing: border-box;">
+        <option value="5">5 videos</option>
+        <option value="10">10 videos</option>
+        <option value="20" selected>20 videos</option>
+        <option value="50">50 videos</option>
+        <option value="100">100 videos</option>
+      </select>
+      <div class="help-text">How many recent videos to import from the channel</div>
+    </div>
+
+    <div class="button-group">
+      <button class="button" id="importChannel">Import Transcripts</button>
+    </div>
+
+    <div id="importStatus"></div>
+  </div>
+
+  <div class="section">
     <h3>How to Use</h3>
     <ol style="font-size: 12px; color: #657786; line-height: 1.5; padding-left: 16px;">
       <li>Visit twitter.com or x.com</li>
@@ -284,7 +334,7 @@
       <li>See success/error feedback instantly</li>
     </ol>
   </div>
-  
+
   <div class="section">
     <div class="button-group">
       <a href="options.html" class="button secondary" target="_blank">Advanced Settings</a>
