--- a/tweet-saver-extension/options.html
+++ b/tweet-saver-extension/options.html
@@ -385,6 +385,6 @@
     </div>
   </div>
 
-  <script src="options.js"></script>
+  <script type="module" src="options.js"></script>
 </body>
 </html>
